| Summary: | ASTERISK-27354: bridge_softmix: When a channel leaves add in any missing participant streams | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | pjsip |
| Date Opened: | 2017-10-17 05:44:43 | Date Closed: | 2017-10-23 10:23:47 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix |
| Versions: | 15.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the maximum number of streams is reached on a PJSIP channel we don't allow any further of that type to be added. This keeps things under control. In the case where a participant leaves the conference bridge we mark their stream as removed and renegotiate so they go away. In this case it is perfectly reasonable that another stream can be added for another participant (since the number of active streams would have been reduced by 1 due to a person leaving). Therefore when a participant leaves we should add any missing destination streams to the topology that is being renegotiated so a new participant can take their place. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-10-23 10:23:49.593-0500 Change 6820 merged by Joshua Colp: bridge_softmix: Reduce topology cloning and improve renegotiation. [https://gerrit.asterisk.org/6820|https://gerrit.asterisk.org/6820] By: Friendly Automation (friendly-automation) 2017-10-23 11:08:00.225-0500 Change 6821 merged by Joshua Colp: bridge_softmix: Reduce topology cloning and improve renegotiation. [https://gerrit.asterisk.org/6821|https://gerrit.asterisk.org/6821] | ||